solc_ossfuzz_seed_corpus/test_solidity/test_8a2e16c307eafd1d1fc05384378000c4bc3c4035a1ca5d1b72108bb65845a2e9_1d65c0c1d724c588d6a396100fb53e82f8f7afe2_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  modifier m0() 
  {
    do
    {
      _;
    }
    while (true);
  }
  type T0 is int160;
  error er0();
  event ev0(uint120  ep0);
  modifier m1() 
  {
    emit L0.ev0((uint120(((uint120(0) ** uint56((uint56(0) >> uint184(uint184(3970716324919092252884592647092469756240670094063997582))))) / uint120(0))) ^ uint120(1329227995784915872903807060280344575)));
    emit ev0(uint120(597745778677669853852816041712351934));
    _;
  }
  function f0(uint200 i0,uint128 i1) public    returns(function (L0.T0, bool) external   o0)
  {
  }
  enum EN0 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13, M14, M15,
    M16, M17, M18, M19, M20, M21, M22, M23,
    M24, M25, M26, M27, M28, M29, M30, M31,
    M32, M33, M34, M35, M36, M37, M38, M39,
    M40, M41, M42, M43, M44, M45, M46, M47,
    M48, M49, M50, M51, M52, M53, M54, M55,
    M56, M57, M58, M59, M60, M61, M62, M63,
    M64, M65, M66, M67, M68, M69, M70, M71,
    M72, M73, M74, M75, M76, M77, M78, M79,
    M80, M81, M82, M83, M84, M85, M86, M87,
    M88, M89, M90, M91, M92, M93, M94, M95,
    M96, M97, M98, M99, M100, M101, M102, M103,
    M104, M105, M106, M107, M108, M109, M110, M111,
    M112, M113, M114, M115, M116, M117, M118, M119,
    M120, M121, M122, M123, M124, M125, M126, M127,
    M128, M129, M130, M131, M132, M133, M134, M135,
    M136, M137, M138, M139, M140, M141, M142
  }
}
contract C0 {
  event ev1(bool[1] indexed ep0, bool  ep1);
  error er1(bool ep0, uint192 ep1);
  fallback() external   
  {
    (bool l0, bytes memory l1) = payable(this).call{value: 15561800497079931343}("");
    unchecked {
      if ((int8((int8(30) / int8(0))) <= ((int8(-72) % int8(0)) ** uint232(uint232(6901746346790563787434755862277025452451108972170386555162524223799295)))))
      {
        function (int48) external   returns (address) l2;
      }
      else if (true)
      {
      }
      else
      {
      }
      for(      bool l3 = false;
false;
)
      {
        (bool l4) = payable(this).send(14380398221257695481);
        return;
        l0 = false;
      }
    }
  }
  int136   s0;
  bytes17  public s1 = bytes17(0x6b1ba35e8126192293fc9137a2a7b12a08);
  uint136 immutable  s2 = uint136(0);
  L0.T0   s3;
  constructor(int136 i0,L0.T0 i1)   {
    s0 &= (int136(43556142965880123323311949751266331066367) ^ (int136(43556142965880123323311949751266331066367) ^ (int136(1988834816658701452116294699300465748101) + int136(18123230443187536352632216520890751603976))));
    s3 = L0.T0.wrap(int160(222632716821697907878002799629331777501899342979));
    { }
  }
  error er2();
  function f2() public virtual  payable
  {
    bytes[2] memory l0 = ["fd758dff", bytes("00000000000000000000000000000000000000000000000000000000000000ffffffffffffffffffffffffffffffffffffffffffffffffffffff")];
  }
  function f3(uint168 i0) public virtual   returns(address payable o0,address payable o1,function (bytes30) external   returns (int64, address payable, L0.T0) o2)
  {
    (bool l0) = payable(this).send(11011513945677496303);
    for(;
;
L0.T0.wrap(int160(0)))
    {
      try o2(bytes30(0x000000000000000000000000000000000000000000000000000000000000)) returns (int64 l1, address payable l2, L0.T0 l3)
      {
      }
      catch
      {
      }
      catch Panic(uint256 l4)
      {
        continue;
      }
      break;
      (s0) = (int136(15093884322940223983543863250673564058887));
      s0 *= int136(0);
    }
    assembly
    {
      let al0 := div(i0, 20302262103332445787329161599081400981799668402195084412251080320556329365765)
    }
    (bool l5, bytes memory l6) = address(this).delegatecall(abi.encodeWithSelector(this.f2.selector));
  }
  struct St0 {
    bool el0;
    address payable el1;
  }
  receive() external   payable
  {
    (bool l0) = payable(this).send(8130943646802828095);
  }
}
pragma solidity >= 0.0.0;
// ----
// Warning 3149: (su0.sol:1653-1766): The result type of the exponentiation operation is equal to the type of the first operand (int8) ignoring the (larger) type of the second operand (uint232) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// TypeError 6378: (su0.sol:2646-2785): Unable to deduce common type for array elements.
